--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <!-- ANIMATION CONTAINER -->
                         <div class="animation-container animation-fade-down" data-animation-delay="0">
                         
-                            <h1>I’m John Miller,</h1>
+                            <h1>I’m Dima Otovskiy,</h1>
                         
                         </div>
                         <!-- /ANIMATION CONTAINER -->
